[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheos"
version = "1.0.0"
description = "PrometheOS Python Client - Desktop API bridge for Pyodide"
authors = [{name = "PrometheOS Team"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]